<resources>
    <string name="app_name">Front-end</string>
    <string name="login_heading">Login...</string>
    <string name="email_login_input">Email</string>
    <string name="password_login_input">Password</string>
    <string name="login_button_login">Login</string>
    <string name="register_button_login">Register</string>
    <string name="register_header">Register...</string>
    <string name="full_name_register_input">Full name</string>
    <string name="email_register_input">Email</string>
    <string name="password_register_input">Password</string>
    <string name="confirm_password_register_input">Confirm password</string>
    <string name="register_button_register">Register</string>

    <string name="customer_name">Customer Name</string>
    <string name="edit_home_location">Edit Home Location</string>
    <string name="edit_email_address">Edit Email Address</string>
    <string name="edit_password">Edit Password</string>
    <string name="save_email">Save</string>
    <string name="edit_email_address_heading">Edit Email Address</string>
    <string name="new_email_address">New Email Address...</string>
    <string name="save_password">Save</string>
    <string name="edit_home_location_heading">Edit Home Location</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="suburb">Suburb</string>
    <string name="save_home_location">Save</string>

    <string name="title_activity_menu">Menu</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_example">Example action</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Prodict name</string>
    <string name="size">Size: </string>
    <string name="size_small">small</string>
    <string name="price">Price: R</string>
    <string name="product_price_value">45.50</string>

    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_edit_user_details">Edit User Details</string>
    <string name="select_location">Select Location</string>
    <string name="home_location">Home Location</string>
    <string name="current_location">Current Location</string>
    <string name="select_time">Select Time</string>
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="enter_time">Enter time</string>
</resources>
