<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.system.odering.front_end.activities.CheckoutActivity">

    <TextView
        android:text="@string/select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lblLocation"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLocation"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:layout_marginTop="19dp" >

        <RadioButton
            android:text="@string/home_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnHome"
            android:layout_weight="1"
            android:onClick="selectLocation"/>

        <RadioButton
            android:text="@string/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnCurrent"
            android:layout_weight="1"
            android:onClick="selectLocation"/>
    </RadioGroup>

    <TextView
        android:text="@string/select_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/lblTime"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTime"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup2"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:text="@string/now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnNow"
            android:layout_weight="1"
            android:onClick="selectTime"/>

        <RadioButton
            android:text="@string/later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtnLater"
            android:layout_weight="1"
            android:onClick="selectTime"/>
    </RadioGroup>

    <Button
        android:text="Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/btnOrder"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="processOrder"/>

    <Button
        android:text="Select Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTime"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
