<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/custom_list_view_product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:id="@+id/custom_list_view_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/custom_list_view_product_image"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="19dp"
        />
    <TextView
        android:id="@+id/product_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/custom_list_view_product_image"
        android:layout_below="@id/custom_list_view_product_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/size"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        />
    <TextView
        android:id="@+id/custom_list_view_product_size_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/product_size"
        android:layout_below="@id/custom_list_view_product_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/size_small"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        />
    <TextView
        android:id="@+id/custom_list_view_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/custom_list_view_product_size_value"
        android:layout_below="@id/custom_list_view_product_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/price"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        />
    <TextView
        android:id="@+id/custom_list_view_product_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/custom_list_view_product_price"
        android:layout_below="@id/custom_list_view_product_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/product_price_value"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawableLeft="@android:drawable/ic_input_add"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/custom_list_view_product_price_value" />

    <!--android:layout_marginLeft="13dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/custom_list_view_product_price_value"-->
</RelativeLayout>