<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.system.odering.front_end.activities.ProfileActivity">

    <ImageView
        android:layout_width="120dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="23dp"
        android:id="@+id/img_avatar"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="uploadAvatar"/>

    <TextView
        android:text="@string/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/custName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:columnCount="1"
        android:layout_centerInParent="true">

        <Button
            android:text="@string/edit_home_location"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/btnEditHomeLocation"
            android:backgroundTint="@android:color/holo_green_dark"
            android:onClick="editHomeLocation"/>

        <Button
            android:text="@string/edit_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/btnEditPassword"
            android:backgroundTint="@android:color/holo_green_dark"
            android:onClick="editPassword"/>

    </GridLayout>

</RelativeLayout>
